# KerriganUnreal

./: CMakeLists.txt
c_lib/SFML/: CONTROL
c_lib/SFML/debug/lib/manual-link/: sfml-main-d.lib
c_lib/SFML/lib/manual-link/: sfml-main.lib
c_lib/SFML/share/sfml/: vcpkg.spdx.json  vcpkg_abi_info.txt
c_lib/eigen3_x64-windows/: CONTROL
c_lib/eigen3_x64-windows/share/eigen3/: vcpkg.spdx.json  vcpkg_abi_info.txt
c_lib/liblsl_x64-windows/: CONTROL
c_lib/liblsl_x64-windows/lib/: lsl.lib
c_lib/liblsl_x64-windows/share/LSL/: LSLTargets-debug.cmake  LSLTargets.cmake
c_lib/liblsl_x64-windows/share/liblsl/: vcpkg.spdx.json  vcpkg_abi_info.txt
include/: Connector.hpp
src/: main.cpp
src/components/: Processing.cpp  emotivConn.cpp  sdkServer.cpp
src/gui/: mainWindow.cpp
